--- a/Curso em Vídeo/aula_06/exer03.html
+++ b/Curso em Vídeo/aula_06/exer03.html
@@ -21,6 +21,9 @@
          * nome.length        -> retorna a quantidade de caracteres.
          * nome.toUpperCase() -> retorna a string em letras maiúsculas.
          * nome.toLowerCase() -> retorna a string em letras minúsculas.
+         * replace            -> retorna uma nova string com algumas ou todas as           * correspondências de um padrão substituídas por um determinado caractere         * (ou caracteres).
+         * numero.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' } -> 
+         * Formatação em real BRL.  
          */
 
         var nome = window.prompt("Digite o seu nome: ");
