--- a/Curso em Vídeo/aula_13/html/exer14.html
+++ b/Curso em Vídeo/aula_13/html/exer14.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 13</title>
-    <link rel="stylesheet" href="/Curso em Vídeo/aula_13/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <!-- assim que a página for carregada, ela irá chamar a função carregar(). -->
 
@@ -17,7 +17,7 @@
     <section>
         <div id="mensagem"></div>
         <div id="imagem">
-            <img src="/Curso em Vídeo/aula_13/imagens/manhã.jpg" alt="imagens">
+            <img src="/aula_13/imagens/manhã.jpg" alt="imagens">
         </div>
     </section>
 
@@ -25,7 +25,7 @@
         <p>&copy; Curso em Vídeo</p>
     </footer>
 
-    <script src="/Curso em Vídeo/aula_13/src/script.js"></script>
+    <script src="../src/script.js"></script>
 </body>
 
 </html>
