--- a/Curso em Vídeo/aula_14/html/exer15.html
+++ b/Curso em Vídeo/aula_14/html/exer15.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 14</title>
-    <link rel="stylesheet" href="/Curso em Vídeo/aula_14/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <p>&copy; Curso em Vídeo</p>
     </footer>
 
-    <script src="/Curso em Vídeo/aula_14/src/script.js"></script>
+    <script src="../src/script.js"></script>
 </body>
 
 </html>
